@startuml archi-diagram-v5

' Layers
package "API Layer" {
    class PropertyController
    class InvestmentController
    class UserController
    class WalletController
}

package "Microservices" {
    package "Property Service" {
        class PropertyService
        class PropertyRepository
        class Property {
          - id: UUID
          - name: String
          - type: String
          - price: double
          - fundingDeadline: Date
          - fundingStatus: String
          + calculateRentalIncome(): double
          + calculateAppreciation(): double
          + transitionState(newState: String): void
        }
    }

    package "Investment Service" {
        class InvestmentService
        class InvestmentRepository
        class Investment {
          - id: UUID
          - property: Property
          - user: User
          - sharePercentage: double
          - investmentAmount: double
          + calculateReturns(): double
          + validateInvestmentLimits(user: User, amount: double): boolean
        }
    }

    package "User Service" {
        class UserService
        class UserRepository
        class User {
          - id: UUID
          - name: String
          - email: String
          - wallet: Wallet
          - role: String "agent | investor"
          + register(): void
          + login(): void
        }
    }

    package "Wallet Service" {
        class WalletService
        class WalletRepository
        class Wallet {
          - id: UUID
          - balance: double
          + credit(amount: double): void
          + debit(amount: double): void
          + getBalance(): double
          + refundInvestment(investmentId: UUID): void
        }
    }

    package "Notification Service" {
        class NotificationService
        class EmailService
    }

    package "Payment Service" {
        class PaymentGateway
        class StripePaymentGateway
    }

    package "Certificate Service" {
        class CertificateService
        class CertificateRepository
        class Certificate {
          - id: UUID
          - property: Property
          - user: User
          - issuedDate: Date
        }
    }
}

' Relationships
PropertyController --> PropertyService
UserController --> UserService
InvestmentController --> InvestmentService
WalletController --> WalletService

PropertyService --> PropertyRepository
InvestmentService --> InvestmentRepository
InvestmentService --> PropertyService
UserService --> UserRepository
WalletService --> WalletRepository
CertificateService --> CertificateRepository
NotificationService --> EmailService
NotificationService --> PaymentGateway

Property "1" -- "*" Investment
User "1" -- "*" Investment
User "1" -- "1" Wallet
Investment "1" -- "1" Certificate
Property "1" -- "*" Certificate

' Domain-Specific Enhancements
PropertyService --> NotificationService : notifyFundingCompletion()
PropertyService --> InvestmentService : validateInvestment()
WalletService --> PaymentGateway : processPayment()
WalletService --> InvestmentService : fundInvestment()
NotificationService --> EmailService : sendNotification()
InvestmentService --> User : validateInvestmentLimits(user, amount)
WalletService --> Wallet : refundInvestment(investmentId)

' Concurrency and Scalability
InvestmentService --> Property : lockForFunding()
PropertyRepository --> Property : handleOptimisticLock()

@enduml
